--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,23 @@
-<p>dashboard works!</p>
+<div class="dashboard-container">
+  <div class="sidebar-bar col-2">
+    <div class="sidebar">
+      <div class="sidebar-title">
+        <p>Stock Manta</p>
+      </div>
+      <div class="search-ticker">
+        <input type="text" placeholder="Type hear to search" />
+      </div>
+      <div class="ticker-list-container">
+        <div class="search-ticker">
+          <input type="text" />
+        </div>
+        <div class="ticker-list">
+          <p class="ticker-item">MSFT</p>
+          <p class="ticker-item">MSFT</p>
+          <p class="ticker-item">MSFT</p>
+          <p class="ticker-item">MSFT</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
