--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
+
+body {
+  font-family: Poppins, sans-serif !important;
+  font-weight: normal;
+  margin: 0;
+
+  p {
+    margin: 0;
+  }
+}
+
+.flatpickr-day {
+  &.selected {
+    background-color: #51459e !important;
+    border-color: #51459e !important;
+  }
+}
